@@ -5,13 +5,12 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.SoftAssertions.assertSoftly;
 
 import java.time.LocalDateTime;
+import java.util.Optional;
+import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.security.access.AccessDeniedException;
-
-import com.google.common.collect.ImmutableSet;
 
 @SpringBootTest
 public class TallyServiceIntegrationTest {
@@ -21,11 +20,12 @@ public class TallyServiceIntegrationTest {
 
     @Test
     void testCreateTallySheet() throws Exception {
-        final TallySheet sheet = tallyService.createNewTallySheet("test");
+        final TallySheet sheet = tallyService.createNewTallySheet("user", "test");
         assertSoftly(softly -> {
             softly.assertThat(sheet.getIncrements()).isEmpty();
             softly.assertThat(sheet.getAdminKey()).isNotEmpty();
             softly.assertThat(sheet.getName()).isEqualTo("test");
+            softly.assertThat(sheet.getUserId()).isEqualTo("user");
             softly.assertThat(sheet.getPublicKey()).isNotEmpty();
             softly.assertThat(sheet.getLastModifiedDateUTC()).isNotNull();
             softly.assertThat(sheet.getCreateDateUTC()).isNotNull();
@@ -34,63 +34,59 @@ public class TallyServiceIntegrationTest {
 
     @Test
     void testGetTallySheetByAdminKey() throws Exception {
-        final TallySheet sheet = tallyService.createNewTallySheet("test");
-        final TallySheet tallySheet = tallyService.getTallySheet(sheet.getAdminKey());
+        final TallySheet sheet = tallyService.createNewTallySheet("user", "test");
+        final TallySheet tallySheet = tallyService.getTallySheet(sheet.getAdminKey().orElseThrow());
         assertThat(tallySheet.getName()).isEqualTo("test");
         assertThat(tallySheet.getAdminKey()).isEqualTo(sheet.getAdminKey());
     }
 
     @Test
     void testGetTallySheetByPublicKey() throws Exception {
-        final TallySheet sheet = tallyService.createNewTallySheet("test");
+        final TallySheet sheet = tallyService.createNewTallySheet("user", "test");
         final TallySheet tallySheet = tallyService.getTallySheet(sheet.getPublicKey());
         assertThat(tallySheet.getName()).isEqualTo("test");
-        assertThat(tallySheet.getAdminKey()).isNull();
+        assertThat(tallySheet.getAdminKey()).isEqualTo(Optional.empty());
     }
 
     @Test
     void testGetTallySheetUnknown() throws Exception {
-        assertThatExceptionOfType(TallySheetNotAvailableException.class).isThrownBy(() -> tallyService.getTallySheet("1234"));
+        assertThatExceptionOfType(TallySheetNotAvailableException.class)
+                .isThrownBy(() -> tallyService.getTallySheet("1234"));
     }
 
     @Test
     void testIncrementWithPublicKey() throws Exception {
-        final TallyIncrement validIncrement = new TallyIncrement();
-        validIncrement.setTags(ImmutableSet.of("pizza"));
-        validIncrement.setDescription("test");
-        validIncrement.setCreateDateUTC(LocalDateTime.now());
+        final TallyIncrement validIncrement = TallyIncrement.newIncrement("test", LocalDateTime.now(), Set.of("pizza"));
 
-        final TallySheet tallySheet = tallyService.createNewTallySheet("increment");
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "increment");
         assertThatExceptionOfType(TallySheetNotAvailableException.class)
                 .isThrownBy(() -> tallyService.increment(tallySheet.getPublicKey(), validIncrement));
     }
 
     @Test
     void testDeleteUnknownAdminKey() throws Exception {
-        assertThatExceptionOfType(TallySheetNotAvailableException.class).isThrownBy(() -> tallyService.deleteTallySheet("1234"));
+        assertThatExceptionOfType(TallySheetNotAvailableException.class)
+                .isThrownBy(() -> tallyService.deleteTallySheet("1234"));
     }
 
     @Test
     void testDeleteWithPublicKey() throws Exception {
-        final TallySheet tallySheet = tallyService.createNewTallySheet("deleteMe");
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "deleteMe");
         assertThatExceptionOfType(TallySheetNotAvailableException.class)
                 .isThrownBy(() -> tallyService.deleteTallySheet(tallySheet.getPublicKey()));
     }
 
     @Test
     void testDeleteWithAdminKey() throws Exception {
-        final TallySheet tallySheet = tallyService.createNewTallySheet("deleteMe");
-        tallyService.deleteTallySheet(tallySheet.getAdminKey());
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "deleteMe");
+        tallyService.deleteTallySheet(tallySheet.getAdminKey().orElseThrow());
         assertThatExceptionOfType(TallySheetNotAvailableException.class)
                 .isThrownBy(() -> tallyService.getTallySheet(tallySheet.getPublicKey()));
     }
 
     @Test
     void testIncrementUnknownAdminKey() throws Exception {
-        final TallyIncrement validIncrement = new TallyIncrement();
-        validIncrement.setTags(ImmutableSet.of("pizza"));
-        validIncrement.setDescription("test");
-        validIncrement.setCreateDateUTC(LocalDateTime.now());
+        final TallyIncrement validIncrement = TallyIncrement.newIncrement("test", LocalDateTime.now(), Set.of("pizza"));
 
         assertThatExceptionOfType(TallySheetNotAvailableException.class)
                 .isThrownBy(() -> tallyService.increment("1234", validIncrement));
@@ -98,19 +94,57 @@ public class TallyServiceIntegrationTest {
 
     @Test
     void testIncrement() throws Exception {
-        final TallySheet tallySheet = tallyService.createNewTallySheet("incrementMe");
-        final TallyIncrement increment = new TallyIncrement();
-        increment.setTags(ImmutableSet.of("pizza"));
-        increment.setDescription("test");
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "incrementMe");
+        final TallyIncrement validIncrement = TallyIncrement.newIncrement("test", LocalDateTime.now(), Set.of("pizza"));
 
-        final TallySheet updated = tallyService.increment(tallySheet.getAdminKey(), increment);
+        final TallySheet updated = tallyService.increment(tallySheet.getAdminKey().orElseThrow(), validIncrement);
 
         assertSoftly(softly -> {
             softly.assertThat(updated.getVersion()).isNotEqualTo(tallySheet.getVersion());
             softly.assertThat(updated.getIncrements()).hasSize(1);
             softly.assertThat(updated.getIncrements()).first().extracting(TallyIncrement::getCreateDateUTC).isNotNull();
             softly.assertThat(updated.getIncrements()).first().extracting(TallyIncrement::getId).isNotNull();
-
         });
+    }
+
+    @Test
+    void testDeleteIncrementSuccessfully() throws Exception {
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "incrementMe");
+        final TallyIncrement validIncrement = TallyIncrement.newIncrement("test", LocalDateTime.now(), Set.of("pizza"));
+
+        tallyService.increment(tallySheet.getAdminKey().orElseThrow(), validIncrement);
+        tallyService.deleteIncrement(tallySheet.getAdminKey().orElseThrow(), validIncrement.getId());
+
+        final TallySheet updated = tallyService.getTallySheet(tallySheet.getAdminKey().orElseThrow());
+        assertThat(updated.getIncrements()).isEmpty();
+    }
+
+    @Test
+    void testDeleteUnknownIncrement() throws Exception {
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "incrementMe");
+
+        assertThatExceptionOfType(IncrementNotAvailableException.class)
+                .isThrownBy(() -> tallyService.deleteIncrement(tallySheet.getAdminKey().orElseThrow(), "foo"));
+    }
+
+    @Test
+    void testDeleteIncrementWithPublicKey() throws Exception {
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "incrementMe");
+        final TallyIncrement validIncrement = TallyIncrement.newIncrement("test", LocalDateTime.now(), Set.of("pizza"));
+
+        assertThatExceptionOfType(TallySheetNotAvailableException.class)
+                .isThrownBy(() -> tallyService.increment(tallySheet.getPublicKey(), validIncrement));
+    }
+
+    @Test
+    void testRetrieveIncrementedTallySheet() throws Exception {
+        final TallySheet tallySheet = tallyService.createNewTallySheet("user", "incrementMe");
+        tallyService.increment(tallySheet.getAdminKey().orElseThrow(),
+                TallyIncrement.newIncrement("test", LocalDateTime.now(), Set.of("pizza")));
+        tallyService.increment(tallySheet.getAdminKey().orElseThrow(),
+                TallyIncrement.newIncrement("test", LocalDateTime.now(), Set.of("pizza")));
+
+        final TallySheet updated = tallyService.getTallySheet(tallySheet.getPublicKey());
+        assertThat(updated.getIncrements()).hasSize(2);
     }
 }
